--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,54 @@
 {
-  "extends": ["airbnb", "prettier", "prettier/react"],
-  "plugins": ["react", "prettier"],
+  "extends": [
+    "airbnb",
+    "prettier",
+    "prettier/react",
+    "plugin:import/errors",
+    "plugin:import/warnings"
+  ],
+  "plugins": [
+    "react",
+    "prettier"
+  ],
   "rules": {
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [".js", "jsx"]
+        "extensions": [
+          ".js",
+          "jsx"
+        ]
       }
     ],
-    "prettier/prettier": ["error", {
-     "endOfLine":"auto"
-   }],
-    "max-len": ["warn", 80],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "max-len": [
+      "warn",
+      80
+    ],
     "no-console": "off",
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}]
-
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": false,
+        "optionalDependencies": false,
+        "peerDependencies": false
+      }
+    ]
   },
   "env": {
     "browser": true
   }
   // "settings": {
   //   "import/resolver": {
-  //     "webpack": {
-  //       "config": "./config/webpack-common-config.js"
-  //     }
+  //     // "webpack": {
+  //     //   "config": "./config/webpack-common-config.js"
+  //     // }
+  //     "babel-module": {}
   //   }
   // }
 }
